AC_INIT([Greybird ], 3.18.0, [https://github.com/shimmerproject/Greybird/issues],
 [Greybird], [http://shimmerproject.org/our-projects/greybird/])
AM_INIT_AUTOMAKE([1.11 foreign subdir-objects tar-ustar no-dist-gzip dist-xz -Wno-portability])
AM_SILENT_RULES([yes])

AC_PREFIX_DEFAULT(/usr)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

AC_MSG_RESULT([
        Greybird $VERSION
        ========
        prefix:                 ${prefix}

])
